fix: menu text wrap behavior

--- a/src/components/BytmDialog.css
+++ b/src/components/BytmDialog.css
@@ -350,7 +350,7 @@
 }
 
 .bytm-markdown-container ul li > ul li::before {
-  white-space: pre;
+  white-space: pre-wrap;
   content: "    • ";
   font-weight: bolder;
 }
